# hw3-youhan200203

./: .gitignore  README.md  ai_documentation.txt  myst.yml  pyproject.toml
.ipynb_checkpoints/: Makefile-checkpoint
data/: GW150914_data.csv
ligotools/: __init__.py
ligotools/ligotools/: utils.py
ligotools/ligotools/tests/: test_readligo.py  test_utils.py
